--- a/core/includes/style.css
+++ b/core/includes/style.css
@@ -3,14 +3,14 @@ body {
 }
 
 .header {
-	margin-top: 5%;
-	margin-left: 5%;
+	margin-top: 3%;
+	margin-left: 15%;
     
 	font-family: Verdana;
 }
 
 .header h2 {
-	color: black;
+	color: #A8A8A8;
 }
 
 .header h4 {
@@ -18,6 +18,14 @@ body {
 	
 	font-size: 14px;
 	font-style: italic;
+}
+
+.header img {
+	height: 205px;
+	width: 75%;
+	
+	border-top: #808080 15px groove;
+	border-bottom: #808080 15px groove;
 }
 
 .footer {
