--- a/core/includes/style.css
+++ b/core/includes/style.css
@@ -22,28 +22,55 @@ body {
 
 .header img {
 	height: 205px;
-	width: 59%;
+	width: 80%;
 	
 	border-top: #808080 15px groove;
 	border-bottom: #808080 15px groove;
+}
+
+#content {
+	overflow: hidden;
 }
 
 .blogbody {
 	width: 50%;
 	margin-top: 3%;
 	margin-left: 15%;
-
+	margin-right: 2%;
+	
+	float:left;
 }
 
 .blogpost {
 	background-color: #C2C2C2;
+	color: #262626;
 	
-	
+	-moz-box-shadow:    inset 0 0 10px #000000;
+    -webkit-box-shadow: inset 0 0 10px #000000;
+    box-shadow:         inset 0 0 10px #000000;
+    
+    padding-left: 10px;
+    padding-top: 4px;
+    padding-bottom: 5px;
+    
+    margin-top: 15px;
+    
 	font-family: Verdana;
 }
 
 .sidebar {
+	width: 15%;
+
+	margin-top: 4%;
+	overflow: hidden;
 	
+	background-color: #A3A3A3;
+	-moz-box-shadow:    inset 0 0 10px #000000;
+    -webkit-box-shadow: inset 0 0 10px #000000;
+    
+    padding: 10px;
+    
+    
 }
 
 .footer {
