--- a/core/includes/style.css
+++ b/core/includes/style.css
@@ -7,12 +7,24 @@ body {
 	margin-left: 15%;
     
 	font-family: Verdana;
+	line-height: 2px;
 }
 
 .header h2 {
-	color: #A8A8A8;
+	color: #525252;
+	
+	opacity: 1;
+    transition: opacity .25s ease-in-out;
+    -moz-transition: opacity .25s ease-in-out;
+    -webkit-transition: opacity .25s ease-in-out;
+    
+    display: inline;
 }
 
+.header h2:hover {
+    opacity: 0.5;
+}
+      
 .header h4 {
 	color: gray;
 	
@@ -23,9 +35,9 @@ body {
 .header img {
 	height: 205px;
 	width: 80%;
-	
-	border-top: #808080 15px groove;
-	border-bottom: #808080 15px groove;
+
+	border-top: #808080 15px solid;
+	border-bottom: #808080 15px solid;
 }
 
 #content {
@@ -52,11 +64,12 @@ body {
     background-color: #C2C2C2;
 	color: #262626;
 	
-	-moz-box-shadow:    inset 0 0 10px #000000;
-    -webkit-box-shadow: inset 0 0 10px #000000;
-    box-shadow:         inset 0 0 10px #000000;
+	-moz-box-shadow:    inset 0 0 6px #000000;
+    -webkit-box-shadow: inset 0 0 6px #000000;
+    box-shadow:         inset 0 0 6px #000000;
     
 	font-family: Verdana;
+	font-size: smaller;
 }
 
 .sidebar {
@@ -68,10 +81,14 @@ body {
 	
 	overflow: hidden;
 	
-	-moz-box-shadow:    inset 0 0 10px #000000;
-    -webkit-box-shadow: inset 0 0 10px #000000; 
+	-moz-box-shadow:    inset 0 0 6px #000000;
+    -webkit-box-shadow: inset 0 0 6px #000000; 
+    box-shadow:         inset 0 0 6px #000000;
     
     background-color: #A3A3A3;
+    
+    font-family: Verdana;
+    font-size: small;
 }
 
 .footer {
