--- a/core/includes/style.css
+++ b/core/includes/style.css
@@ -10,7 +10,7 @@ body {
 	line-height: 2px;
 }
 
-.header h2 {
+.header a {
 	color: #525252;
 	
 	opacity: 1;
@@ -19,9 +19,11 @@ body {
     -webkit-transition: opacity .25s ease-in-out;
     
     display: inline;
+    font-size: 28px;
+    text-decoration: none
 }
 
-.header h2:hover {
+.header a:hover {
     opacity: 0.5;
 }
       
@@ -35,9 +37,13 @@ body {
 .header img {
 	height: 205px;
 	width: 80%;
-
+	
+	margin-top: 1%;
+	
 	border-top: #808080 15px solid;
 	border-bottom: #808080 15px solid;
+	
+	border-radius: 3px;
 }
 
 #content {
@@ -55,18 +61,20 @@ body {
 }
 
 .blogpost {
-    margin-top: 15px;
+    margin-top: 13px;
     
     padding-left: 10px;
     padding-top: 4px;
     padding-bottom: 5px;
     
-    background-color: #C2C2C2;
+    background-color: #D6D6D6;
 	color: #262626;
 	
-	-moz-box-shadow:    inset 0 0 6px #000000;
-    -webkit-box-shadow: inset 0 0 6px #000000;
-    box-shadow:         inset 0 0 6px #000000;
+	-moz-box-shadow:    inset 0 0 3px #000000;
+    -webkit-box-shadow: inset 0 0 3px #000000;
+    box-shadow:         inset 0 0 3px #000000;
+    
+    border-radius: 3px;
     
 	font-family: Verdana;
 	font-size: smaller;
@@ -81,11 +89,13 @@ body {
 	
 	overflow: hidden;
 	
-	-moz-box-shadow:    inset 0 0 6px #000000;
-    -webkit-box-shadow: inset 0 0 6px #000000; 
-    box-shadow:         inset 0 0 6px #000000;
+	background-color: #A3A3A3;
+	
+	-moz-box-shadow:    inset 0 0 3px #000000;
+    -webkit-box-shadow: inset 0 0 3px #000000; 
+    box-shadow:         inset 0 0 3px #000000;
     
-    background-color: #A3A3A3;
+    border-radius: 3px;
     
     font-family: Verdana;
     font-size: small;
