increased blog post paddings on right

--- a/core/includes/style.css
+++ b/core/includes/style.css
@@ -73,6 +73,7 @@ body {
     margin-top: 13px;
     
     padding-left: 10px;
+    padding-right: 10px;
     padding-top: 4px;
     padding-bottom: 5px;
     
