--- a/core/includes/style.css
+++ b/core/includes/style.css
@@ -98,6 +98,11 @@ body {
     background-color: #F2F2F2;
 }
 
+.blogposttag {
+	font-size: 10px;
+	line-height: 3px;
+}
+
 .sidebar {
 	width: 15%;
 
