--- a/core/includes/style.css
+++ b/core/includes/style.css
@@ -27,7 +27,6 @@ body {
 	color: gray;
 	
 	font-size: 14px;
-	font-style: italic;
 }
 
 #headerimg {
@@ -48,7 +47,7 @@ body {
 }
 
 #headerimg:hover {
-	opacity: 0.7;
+	opacity: 0.8;
 }
 
 #content {
@@ -135,7 +134,7 @@ body {
 }
 
 .sidebar:hover {
-    background-color: #D6D6D6;
+    background-color: #858585;
 }
 
 .footer {
