--- a/core/includes/style.css
+++ b/core/includes/style.css
@@ -80,11 +80,13 @@ body {
     background-color: #D6D6D6;
 	color: #262626;
 	
-	-moz-box-shadow:    inset 0 0 3px #000000;
+	-moz-box-shadow: inset 0 0 3px #000000;
     -webkit-box-shadow: inset 0 0 3px #000000;
-    box-shadow:         inset 0 0 3px #000000;
+    box-shadow: inset 0 0 3px #000000;
     
     border-radius: 3px;
+    
+    line-height: 1.5;
     
     transition: background-color .2s ease-in-out;
     -moz-transition: background-color .2s ease-in-out;
@@ -99,9 +101,8 @@ body {
 }
 
 .blogposttitle {
-	font-size: 18px;
+	font-size: 20px;
 	font-family: "Century Gothic", Verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-style: italic;
 	
 	line-height: 0.5;
 }
@@ -124,9 +125,9 @@ body {
 	
 	background-color: #A3A3A3;
 	
-	-moz-box-shadow:    inset 0 0 3px #000000;
+	-moz-box-shadow: inset 0 0 3px #000000;
     -webkit-box-shadow: inset 0 0 3px #000000; 
-    box-shadow:         inset 0 0 3px #000000;
+    box-shadow: inset 0 0 3px #000000;
     
     border-radius: 3px;
     
