--- a/core/includes/style.css
+++ b/core/includes/style.css
@@ -23,10 +23,11 @@ body {
     color: #B3B3B3;
 }
       
-.header h4 {
+.header p {
 	color: gray;
 	
-	font-size: 14px;
+	letter-spacing: 1px;
+	font-size: smaller;
 }
 
 #headerimg {
@@ -60,7 +61,7 @@ body {
 }
 
 .blogbody {
-	width: 50%;
+	width: 56%;
 	
 	margin-top: 2%;
 	margin-right: 1%;
@@ -115,11 +116,11 @@ body {
 }
 
 .sidebar {
-	width: 25%;
+	width: 20%;
 
 	margin-top: 2%;
 	
-	padding: 2%;
+	padding: 1.5%;
 	
 	overflow: hidden;
 	
@@ -136,7 +137,7 @@ body {
     -webkit-transition: background-color .2s ease-in-out;
     
     font-family: "Century Gothic", Verdana, Geneva, Arial, Helvetica, sans-serif;
-    font-size: small;
+    font-size: 14px;
 }
 
 .sidebar:hover {
