made sidebar text justified

--- a/core/includes/style.css
+++ b/core/includes/style.css
@@ -138,6 +138,8 @@ body {
     
     font-family: "Century Gothic", Verdana, Geneva, Arial, Helvetica, sans-serif;
     font-size: 14px;
+    
+    text-align: justify;
 }
 
 .sidebar:hover {
