--- a/core/includes/style.css
+++ b/core/includes/style.css
@@ -36,8 +36,8 @@ body {
 	
 	margin-top: 1%;
 	
-	border-top: #808080 15px solid;
-	border-bottom: #808080 15px solid;
+	border-top: #808080 10px solid;
+	border-bottom: #808080 10px solid;
 	
 	border-radius: 3px;
 	
@@ -61,7 +61,7 @@ body {
 }
 
 .blogbody {
-	width: 56%;
+	width: 57%;
 	
 	margin-top: 2%;
 	margin-right: 1%;
@@ -94,7 +94,9 @@ body {
     -webkit-transition: background-color .2s ease-in-out;
     
 	font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
-	font-size: smaller;
+	font-size: smaller;   
+	 
+    text-align: justify;
 }
 
 .blogpost:hover {
@@ -120,7 +122,7 @@ body {
 
 	margin-top: 2%;
 	
-	padding: 1.5%;
+	padding: 1%;
 	
 	overflow: hidden;
 	
